--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,8 @@
+
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    // ...
+    "plugin:react-hooks/recommended",
+    "next/core-web-vitals"
+  ]
 }
