--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
     "mongodb": "^5.6.0",
     "mongodb-core": "^3.2.7"
   }
