--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.4",
+    "@npmcli/fs": "^3.1.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -19,7 +20,8 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "vercel": "^31.0.3"
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0",
