--- a/package.json
+++ b/package.json
@@ -10,23 +10,17 @@
     "server-json": "json-server --watch student.json --port 8000"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@next/font": "^13.4.4",
+    "@next/font": "^13.4.10",
     "@npmcli/fs": "^3.1.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "json-server": "^0.17.3",
-=======
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
->>>>>>> a94b7533ebf6d76e902996129af00b63a887c4d9
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-<<<<<<< HEAD
+    "sharp": "^0.32.3",
     "tailwindcss": "3.3.1",
     "vercel": "^31.0.3"
   },
@@ -34,8 +28,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "mongodb": "^5.6.0",
     "mongodb-core": "^3.2.7"
-=======
-    "tailwindcss": "3.3.1"
->>>>>>> a94b7533ebf6d76e902996129af00b63a887c4d9
   }
 }
