--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.3.0",
     "json-server": "^0.17.3",
-    "next": "13.3.0",
+    "next": "^13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
